feat: implement Spark analytics module for processing Kafka events and storing results in MongoDB